[FEATURE] Adjust some suggestions in the ocean embedding store review